force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Custom_Geolocation__c</fullName>
    <label>Custom Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>