force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Lookup_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Custom_Lookup_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Lookup To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TaskRay Projects (Custom Lookup To Account)</relationshipLabel>
    <relationshipName>TaskRay_Projects_Task</relationshipName>
    <type>Lookup</type>
</CustomField>