force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rollup__c</fullName>
    <label>Custom Rollup</label>
    <summaryForeignKey>TASKRAY__trChecklistItem__c.TASKRAY__Project_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>