force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text__c</fullName>
    <label>Custom Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>