force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_Area__c</fullName>
    <label>Custom Text Area</label>
    <type>TextArea</type>
</CustomField>