force-app/main/default/objects/TASKRAY__Project_Task__c/fields/Custom_Time__c.field-meta.xml
<CustomField>
    <fullName>Custom_Time__c</fullName>
    <label>Custom Time</label>
    <type>Time</type>
</CustomField>